testsuite/tests/overloadedrecflds/should_fail/T18999_NoDisambiguateRecordFields.stderr

T18999_NoDisambiguateRecordFields.hs:6:13: error:
    Ambiguous occurrence ‘not’
    It could refer to
       either ‘Prelude.not’,
              imported from ‘Prelude’ at T18999_NoDisambiguateRecordFields.hs:2:8-40
              (and originally defined in ‘GHC.Classes’)
           or the field ‘not’ of record ‘Foo’,
              defined at T18999_NoDisambiguateRecordFields.hs:4:18

T18999_NoDisambiguateRecordFields.hs:8:11: error:
    Ambiguous occurrence ‘not’
    It could refer to
       either ‘Prelude.not’,
              imported from ‘Prelude’ at T18999_NoDisambiguateRecordFields.hs:2:8-40
              (and originally defined in ‘GHC.Classes’)
           or the field ‘not’ of record ‘Foo’,
              defined at T18999_NoDisambiguateRecordFields.hs:4:18
